--- a/where-does-the-delivery-work.html
+++ b/where-does-the-delivery-work.html
@@ -12,8 +12,8 @@
     <title>Где работает доставка?</title>
     <link rel="stylesheet" href="./assets/css/owlcarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="./assets/css/owlcarousel/owl.theme.default.min.css">
-    <link rel="stylesheet" href="./assets/css/style.css?v=1712222460262">
-    <script src="./assets/js/jQuery/jquery-3.7.1.min.js"></script>
+    <link rel="stylesheet" href="./assets/css/style.css?v=1712227272617">
+    <script src="./assets/js/jQuery/jquery.min.js"></script>
     <script src="./assets/js/owlcarousel/owl.carousel.min.js"></script>
   </head>
   <body>
@@ -32,17 +32,17 @@
             <h6>Проблема не решилась? Свяжитесь с нами, мы поможем</h6>
             <div class="where-does-the-delivery-work__btn-group">
               <div class="item item_big item_green">
-                <button type="button" role="button">
+                <button type="button">
                   <svg class="online-chat-white" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M14.4 3.2H13.6V9.6C13.6 10.04 13.24 10.4 12.8 10.4H3.2V11.2C3.2 12.08 3.92 12.8 4.8 12.8H12.8L16 16V4.8C16 3.92 15.28 3.2 14.4 3.2ZM12 7.2V1.6C12 0.72 11.28 0 10.4 0H1.6C0.72 0 0 0.72 0 1.6V12L3.2 8.8H10.4C11.28 8.8 12 8.08 12 7.2Z" fill="white"></path>
                   </svg><span>Онлайн-чат</span>
                 </button>
               </div>
-              <div class="item"><a href="tel:+79999999999" title="Позвонить" role="link">
+              <div class="item"><a href="tel:+79999999999" title="Позвонить">
                   <svg class="phone-green" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M14.4323 10.9109L12.17 10.6526C11.6267 10.5903 11.0923 10.7773 10.7093 11.1603L9.07041 12.7992C6.54978 11.5166 4.4834 9.45909 3.20082 6.92954L4.84858 5.28177C5.23157 4.89878 5.41862 4.36436 5.35627 3.82104L5.09797 1.57652C4.99109 0.676922 4.23401 0 3.32551 0H1.78464C0.778165 0 -0.0590758 0.837245 0.0032719 1.84372C0.475333 9.45018 6.55869 15.5247 14.1562 15.9967C15.1627 16.0591 15.9999 15.2218 15.9999 14.2154V12.6745C16.0088 11.7749 15.3319 11.0178 14.4323 10.9109Z" fill="#36BA5F"></path>
                   </svg></a></div>
-              <div class="item"><a href="mail:example@yandex.ru" title="Обратная связь" role="link">
+              <div class="item"><a href="mail:example@yandex.ru" title="Обратная связь">
                   <svg class="mail-green" width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M14.4 0H1.6C0.72 0 0 0.675 0 1.5V10.5C0 11.325 0.72 12 1.6 12H14.4C15.28 12 16 11.325 16 10.5V1.5C16 0.675 15.28 0 14.4 0ZM14.08 3.1875L8.848 6.255C8.328 6.5625 7.672 6.5625 7.152 6.255L1.92 3.1875C1.72 3.0675 1.6 2.865 1.6 2.6475C1.6 2.145 2.184 1.845 2.64 2.1075L8 5.25L13.36 2.1075C13.816 1.845 14.4 2.145 14.4 2.6475C14.4 2.865 14.28 3.0675 14.08 3.1875Z" fill="#36BA5F"></path>
                   </svg></a></div>
@@ -51,7 +51,7 @@
         </div>
       </div>
     </div>
-    <script src="./assets/js/bundle.js?v=1712222460262"></script>
-    <script src="./assets/js/owlcarousel-setup/owlcarousel.setup.js?v=1712222460262"></script>
+    <script src="./assets/js/bundle.js?v=1712227272618"></script>
+    <script src="./assets/js/owlcarousel-setup/owlcarousel.setup.js?v=1712227272618"></script>
   </body>
 </html>
