Сделал адаптив и писель пёфект

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Главная</title>
     <link rel="stylesheet" href="./assets/css/owlcarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="./assets/css/owlcarousel/owl.theme.default.min.css">
-    <link rel="stylesheet" href="./assets/css/style.css?v=1712227272532">
+    <link rel="stylesheet" href="./assets/css/style.css?v=1712249276675">
     <script src="./assets/js/jQuery/jquery.min.js"></script>
     <script src="./assets/js/owlcarousel/owl.carousel.min.js"></script>
   </head>
@@ -127,26 +127,34 @@
         <div class="reference">
           <div class="container">
             <h2 class="title">Справка</h2>
-            <div class="reference__btn">
-              <div class="reference__btn__title">Бережная сборка</div>
-              <div class="reference__btn__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid cum dicta ducimus ea enim facere facilis harum inventore itaque, iure maxime officia officiis perspiciatis, porro quas, quia quo quod tempore?</div>
+            <div class="reference__btn-wrap">
+              <div class="reference__btn">
+                <div class="reference__btn__title">Бережная сборка</div>
+              </div>
+              <div class="reference__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid cum dicta ducimus ea enim facere facilis harum inventore itaque, iure maxime officia officiis perspiciatis, porro quas, quia quo quod tempore?</div>
             </div>
-            <div class="reference__btn selected">
-              <div class="reference__btn__title">Способы доставки и самовывоза</div>
-              <div class="reference__btn__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid cum dicta ducimus ea enim facere facilis harum inventore itaque, iure maxime officia officiis perspiciatis, porro quas, quia quo quod tempore?</div>
+            <div class="reference__btn-wrap selected">
+              <div class="reference__btn">
+                <div class="reference__btn__title">Способы доставки и самовывоза</div>
+              </div>
+              <div class="reference__content">Это карта лояльности с вашим номером покупат Это карта <br>лояльности с вашим номером покупат</div>
             </div>
-            <div class="reference__btn">
-              <div class="reference__btn__title">Минимальная сумма заказа</div>
-              <div class="reference__btn__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid cum dicta ducimus ea enim facere facilis harum inventore itaque, iure maxime officia officiis perspiciatis, porro quas, quia quo quod tempore?</div>
+            <div class="reference__btn-wrap">
+              <div class="reference__btn">
+                <div class="reference__btn__title">Минимальная сумма заказа</div>
+              </div>
+              <div class="reference__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid cum dicta ducimus ea enim facere facilis harum inventore itaque, iure maxime officia officiis perspiciatis, porro quas, quia quo quod tempore?</div>
             </div>
-            <div class="reference__btn selected">
-              <div class="reference__btn__title">Лёгкий возврат</div>
-              <div class="reference__btn__content">Это карта лояльности с вашим номером покупат Это карта <br>лояльности с вашим номером покупат</div>
+            <div class="reference__btn-wrap selected">
+              <div class="reference__btn">
+                <div class="reference__btn__title">Лёгкий возврат</div>
+              </div>
+              <div class="reference__content">Это карта лояльности с вашим номером покупат Это карта <br>лояльности с вашим номером покупат</div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <script src="./assets/js/owlcarousel-setup/owlcarousel.setup.js?v=1712227272532"></script>
+    <script src="./assets/js/owlcarousel-setup/owlcarousel.setup.js?v=1712249276676"></script>
   </body>
 </html>
