--- a/where-does-the-delivery-work.html
+++ b/where-does-the-delivery-work.html
@@ -12,7 +12,7 @@
     <title>Где работает доставка?</title>
     <link rel="stylesheet" href="./assets/css/owlcarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="./assets/css/owlcarousel/owl.theme.default.min.css">
-    <link rel="stylesheet" href="./assets/css/style.css?v=1712227272617">
+    <link rel="stylesheet" href="./assets/css/style.css?v=1712249276743">
     <script src="./assets/js/jQuery/jquery.min.js"></script>
     <script src="./assets/js/owlcarousel/owl.carousel.min.js"></script>
   </head>
@@ -27,7 +27,7 @@
               </svg>
             </button>
           </h1>
-          <p>Это карта лояльности с вашим номером покупателя. Она бывает пластиковой или виртуальной. При входе в приложение или на сайт достаточно указать ваш номер телефона. Если к нему привязана карта «Давайте дружить!», она будет выбрана автоматически. Если нет, будет создана новая. Номер карты виден под вашим именем на главном экране приложения и в личном кабинете на сайте. Это карта лояльности с вашим номером покупателя. Она бывает пластиковой или виртуальной. При входе в приложение или на сайт достаточно указать ваш номер телефона. Если к нему привязана карта «Давайте дружить!», она будет выбрана автоматически. Если нет, будет создана новая. Номер карты виден под вашим именем на главном экране приложения и в личном кабинете на сайте. Это карта лояльности с вашим номером покупателя. Она бывает пластиковой или виртуальной. При входе в приложение или на сайт достаточно указать ваш номер телефона. Если к нему привязана карта «Давайте дружить!», она будет выбрана автоматически. Если нет, будет создана новая. Номер карты виден под вашим именем на главном экране приложения и в личном кабинете на сайте. Это карта лояльности с вашим номером покупателя. Она бывает пластиковой или виртуальной. При входе в приложение или на сайт достаточно указать ваш номер телефона. Если к нему привязана карта «Давайте дружить!», она будет выбрана автоматически. Если нет, будет создана новая. Номер карты виден под вашим именем на главном экране приложения и в личном кабинете на сайте.</p>
+          <p>Это карта лояльности с вашим номером покупателя. Она бывает пластиковой или виртуальной. При входе в приложение или на сайт достаточно указать ваш номер телефона. Если к нему привязана карта «Давайте дружить!», она будет выбрана автоматически. Если нет, будет создана новая. Номер карты виден под вашим именем на главном экране приложения и в личном кабинете на сайте.<br> Это карта лояльности с вашим номером покупателя. Она бывает пластиковой или виртуальной. При входе в приложение или на сайт достаточно указать ваш номер телефона. Если к нему привязана карта «Давайте дружить!», она будет выбрана автоматически. Если нет, будет создана новая. Номер карты виден под вашим именем на главном экране приложения и в личном кабинете на сайте.<br> Это карта лояльности с вашим номером покупателя. Она бывает пластиковой или виртуальной. При входе в приложение или на сайт достаточно указать ваш номер телефона. Если к нему привязана карта «Давайте дружить!», она будет выбрана автоматически. Если нет, будет создана новая. Номер карты виден под вашим именем на главном экране приложения и в личном кабинете на сайте.<br> Это карта лояльности с вашим номером покупателя. Она бывает пластиковой или виртуальной. При входе в приложение или на сайт достаточно указать ваш номер телефона. Если к нему привязана карта «Давайте дружить!», она будет выбрана автоматически. Если нет, будет создана новая. Номер карты виден под вашим именем на главном экране приложения и в личном кабинете на сайте.</p>
           <div class="where-does-the-delivery-work__contact-us">
             <h6>Проблема не решилась? Свяжитесь с нами, мы поможем</h6>
             <div class="where-does-the-delivery-work__btn-group">
@@ -51,6 +51,6 @@
         </div>
       </div>
     </div>
-    <script src="./assets/js/owlcarousel-setup/owlcarousel.setup.js?v=1712227272618"></script>
+    <script src="./assets/js/owlcarousel-setup/owlcarousel.setup.js?v=1712249276743"></script>
   </body>
 </html>
