Сделал адаптив и писель пёфект 6

--- a/where-does-the-delivery-work.html
+++ b/where-does-the-delivery-work.html
@@ -12,7 +12,7 @@
     <title>Где работает доставка?</title>
     <link rel="stylesheet" href="./assets/css/owlcarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="./assets/css/owlcarousel/owl.theme.default.min.css">
-    <link rel="stylesheet" href="./assets/css/style.css?v=1712250786041">
+    <link rel="stylesheet" href="./assets/css/style.css?v=1712251706608">
     <script src="./assets/js/jQuery/jquery.min.js"></script>
     <script src="./assets/js/owlcarousel/owl.carousel.min.js"></script>
   </head>
@@ -51,5 +51,6 @@
         </div>
       </div>
     </div>
+    <script src="./assets/js/owlcarousel-setup/owlcarousel.setup.js?v=1712251706608"></script>
   </body>
 </html>
